--- a/style.css
+++ b/style.css
@@ -50,3 +50,17 @@ td:nth-child(2) {
   background-size: 62px;
   padding: 40px;
 }
+
+
+div.tip {
+    position: absolute;
+    text-align: center;
+    width: 20px;
+    height: 20px;
+    padding: 12px 12px 12px 12px;
+    font: 12px sans-serif;
+    background: #8C421C;
+    border: 0px;
+    border-radius: 80px;
+    pointer-events: none;
+}
