--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ td:nth-child(2) {
   clear: both;
   background-image: url('media/checkeredFlag.svg');
   background-size: 62px;
-  padding: 62px;
+  padding: 100%;
 }
 
 
